--- a/Config/Valkyrie/SIMULATION.yaml
+++ b/Config/Valkyrie/SIMULATION.yaml
@@ -1,5 +1,5 @@
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
-is_record: false
+is_record: true
 show_joint_frame: false
 plot_mpc_result: true
 #plot_mpc_result: false
