--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -1,45 +1,17 @@
 test_configuration:
-    ## keep walking
-    #ini_dsp_duration: 0.8
-    #dsp_duration: 0.6
-    #fin_dsp_duration: 0.6
-    #ssp_duration: 0.3
-    #trns_duration: 0.03
-
-    #com_height: 0.9
-    #walking_distance: 1.3
-    #footstep_width: 0.27
-    #footstep_length: 0.15
-    #swing_height: 0.11
-    #replan: false
-
-    ## walk and stop 1
-    #ini_dsp_duration: 0.8
-    #dsp_duration: 0.6
-    #fin_dsp_duration: 0.6
-    #ssp_duration: 0.3
-    #trns_duration: 0.03
-
-    #com_height: 0.9
-    #walking_distance: 0.4
-    #footstep_width: 0.27
-    #footstep_length: 0.15
-    #swing_height: 0.11
-    #replan: false
-
-    ## walk and stop 2
+    # Temporal parameters
     ini_dsp_duration: 0.8
     dsp_duration: 0.6
     fin_dsp_duration: 0.6
     ssp_duration: 0.3
     trns_duration: 0.03
 
+    # Walking parameters
     com_height: 0.9
-    walking_distance: 0.52
     footstep_width: 0.27
     footstep_length: 0.15
+    footstep_orientation: 0.15
     swing_height: 0.11
-    replan: false
 
 planner_configuration:
     # ==========================================================================
@@ -75,8 +47,6 @@ planner_configuration:
         eef_offset_lf: [ 0.0189,  0.00,  0.00]
         eef_offset_rh: [ 0.20,  0.00,  0.48]
         eef_offset_lh: [-0.20,  0.00,  0.48]
-        #cop_range_rf: [-0.135, 0.135, -0.08, 0.08]
-        #cop_range_lf: [-0.135, 0.135, -0.08, 0.08]
         cop_range_rf: [-0.06, 0.06, -0.02, 0.02]
         cop_range_lf: [-0.06, 0.06, -0.02, 0.02]
         cop_range_rh: [-0.03,  0.03, -0.03,  0.03]
@@ -127,8 +97,6 @@ control_configuration:
               70, 70, 70, 70, 70, 70, 70, 70 ]
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
 
 
     rs_start_trns_ctrl:
@@ -140,8 +108,6 @@ control_configuration:
               70, 70, 70, 70, 70, 70, 70, 70 ]
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
 
         max_rf_z: 1500
         min_rf_z: 3
@@ -155,8 +121,6 @@ control_configuration:
               70, 70, 70, 70, 70, 70, 70, 70 ]
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
 
         max_rf_z: 1500
         min_rf_z: 3
@@ -170,8 +134,6 @@ control_configuration:
               70, 70, 70, 70, 70, 70, 70, 70 ]
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
 
         max_rf_z: 1500
         min_rf_z: 3
@@ -185,8 +147,6 @@ control_configuration:
               70, 70, 70, 70, 70, 70, 70, 70 ]
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
 
         max_rf_z: 1500
         min_rf_z: 3
@@ -201,9 +161,6 @@ control_configuration:
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
 
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
-
         foot_pos_kp: [150., 150., 150.]
         foot_pos_kd: [10., 10., 10.]
 
@@ -217,9 +174,5 @@ control_configuration:
         com_kp: [5000., 15000., 5000.]
         com_kd: [500., 1500., 500.]
 
-        centroid_kp: [0., 0., 0., 5000., 15000., 5000.]
-        centroid_kd: [5., 5., 5., 15., 15., 15.]
-
         foot_pos_kp: [150., 150., 150.]
         foot_pos_kd: [10., 10., 10.]
-
