--- a/Config/Draco/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_SIM_TEST.yaml
@@ -1,92 +1,150 @@
 test_configuration:
-    start_phase: 0
+    # Temporal parameters
+    ini_dsp_duration: 0.8
+    dsp_duration: 0.6
+    fin_dsp_duration: 0.6
+    ssp_duration: 0.3
+    trns_duration: 0.03
 
-    initial_jpos: [0., -0.1, -0.9, 1.7, 0.71, 0., 0.08, -0.9, 1.7, 0.71]
-
-    body_height: 0.98
-    com_height_for_omega: 1.0
-
-    jpos_initialization_time: 0.15
-    com_lifting_time: 0.15
-
-
-    swing_time: 0.33
-    st_transition_time: 0.03
-    end_transition_time: 0.03
-    stance_time: 0.01
-
-    replanning: true
-    #replanning: false
-    transition_phase_mix_ratio: 0.2
-    double_stance_mix_ratio: 0.0
-    contact_switch_check: true
-    #contact_switch_check: false
-
-control_configuration:
-
-    joint_position_ctrl:
-        kp: [100 , 100 , 100 , 100 , 50. , 100 , 100 , 100 , 100 , 50. ]
-        kd: [3   , 3   , 3   , 3   , 1.   , 3   , 3   , 3   , 3   , 1.  ]
-
-    double_contact_trans_ctrl:
-        max_rf_z: 300.0
-        min_rf_z: 5.0
-
-        kp: [ 150 , 150 , 150 , 150 , 5 , 150 , 150 , 150 , 150 , 5 ]
-        kd: [ 8   , 8   , 8   , 8   , 0 , 8   , 8   , 8   , 8   , 0 ]
-
-    body_ctrl:
-        kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
-        kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
-
-    single_contact_trans_ctrl:
-        max_rf_z: 550
-        min_rf_z: 0
-
-        kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
-        kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
-
-    left_body_foot_planning_ctrl:
-        planner_name: velocity_reversal_lipm
-        swing_height: 0.17
-        push_down_height: 0.0
-        default_target_foot_location: [0.0, 0.15, 0.0]
-
-        kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
-        kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
-
-        body_pt_offset: [0.06, 0.0]
-        foot_landing_offset: [0.0, 0.0]
-
-        fin_ankle: 1.4
-        switch_vel_threshold: -2.8
-
-        fin_foot_z_vel: -0.5
-        fin_foot_z_acc: 5.0
-
-    right_body_foot_planning_ctrl:
-        planner_name: velocity_reversal_lipm
-        swing_height: 0.17
-        push_down_height: 0.0
-        default_target_foot_location: [0.0, -0.15, 0.0]
-
-        kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
-        kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
-
-        body_pt_offset: [0.06, 0.0]
-        foot_landing_offset: [0., 0.]
-
-        fin_ankle: 1.4
-        switch_vel_threshold: -2.8
-
-        fin_foot_z_vel: -0.5
-        fin_foot_z_acc: 5.0
+    # Walking parameters
+    com_height: 0.9
+    footstep_width: 0.27
+    footstep_length: 0.15
+    footstep_orientation: 0.15
+    swing_height: 0.11
 
 planner_configuration:
+    # ==========================================================================
+    # Optimization parameters
+    # ==========================================================================
+    optimization:
 
-    velocity_reversal_pln:
-        x_step_length_limit: [-0.6, 0.6]
-        y_step_length_limit: [0.20, 0.70]
-        com_velocity_limit: [0.0, 1.3]
-        t_prime: [0.20 , 0.22]
-        kappa: [-0.20, -0.20]
+        heuristic: SoftConstraint  # Types: TrustRegion, SoftConstraint
+        n_act_eefs: 2
+        time_step: 0.1
+        time_horizon: 1.6
+        external_force: [0.00, 0.00, 0.00]
+        num_com_viapoints: 0 #TODO:will be depricated
+        com_viapoints:
+          via0: [2.50,    0.500, 0.45,  0.00]
+
+        #####################
+        # Timing parameters #
+        #####################
+
+        max_time_iterations: 100
+        max_time_residual_tolerance: 1e-3
+        min_time_residual_improvement: 1e-5
+
+        ############################
+        # Configuration parameters #
+        ############################
+
+        friction_coeff: 0.7
+        friction_cone: LinearCone  # Types: LinearCone, SocCone #
+        torque_range: [-100.0, 100.0]
+        eef_offset_rf: [ 0.0189,  0.00,  0.00]
+        eef_offset_lf: [ 0.0189,  0.00,  0.00]
+        eef_offset_rh: [ 0.20,  0.00,  0.48]
+        eef_offset_lh: [-0.20,  0.00,  0.48]
+        cop_range_rf: [-0.06, 0.06, -0.02, 0.02]
+        cop_range_lf: [-0.06, 0.06, -0.02, 0.02]
+        cop_range_rh: [-0.03,  0.03, -0.03,  0.03]
+        cop_range_lh: [-0.03,  0.03, -0.03,  0.03]
+        max_eef_lengths: [1.1,  1.1,  0.60,  0.60]
+
+        ####################
+        # Dynamics weights #
+        ####################
+
+        w_trq_arm:       1.000
+        w_trq_leg:       1.000
+        w_com:           [ 10000,  10000,  10000]
+        w_amom:          [ 0.500,  0.500,  0.500]
+        w_lmom:          [ 0.010,  0.005,  0.001]
+        w_amomd:         [ 0.100,  0.400,  0.100]
+        w_lmomd:         [ 0.015,  0.015,  0.015]
+        w_amom_final:    [ 10.00,  10.00,  10.00]
+        w_lmom_final:    [ 10.00,  10.00,  10.00]
+        w_com_via:       [ 0.000,  0.000,  0.000]
+        w_frc_arm:       [ 0.001,  0.001,  0.001]
+        w_frc_leg:       [ 0.001,  0.001,  0.001]
+        w_dfrc_arm:      [ 0.000,  0.000,  0.000]
+        w_dfrc_leg:      [ 0.000,  0.000,  0.000]
+        w_amom_track:    [ 1.000,  1.000,  1.000]
+        w_lmom_track:    [ 0.100,  0.100,  0.100]
+
+        #######################
+        # Storage information #
+        #######################
+
+        store_data: False
+        storage_path: ExperimentData/WPG_TEST_PLANNING_RESULT.yaml
+
+        ##################
+        # Solver setting #
+        ##################
+
+        use_default_solver_setting: True
+
+control_configuration:
+    ds_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+
+    rs_start_trns_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+        max_rf_z: 1500
+        min_rf_z: 3
+
+    rs_end_trns_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+        max_rf_z: 1500
+        min_rf_z: 3
+
+    ls_start_trns_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+        max_rf_z: 1500
+        min_rf_z: 3
+
+    ls_end_trns_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+        max_rf_z: 1500
+        min_rf_z: 3
+
+    r_ss_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+        foot_pos_kp: [150., 150., 150.]
+        foot_pos_kd: [10., 10., 10.]
+
+    l_ss_ctrl:
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+
+        foot_pos_kp: [150., 150., 150.]
+        foot_pos_kd: [10., 10., 10.]
