Draco Centroidal Dyn start

--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -6,13 +6,13 @@ test_name: walking_test
 #test_name: rl_walking_test
 #test_name: turning_test
 
-jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
-jpos_max: [0.6  , 0.4  , 0.5   , 1.9   , 2.33 , 0.6  , 0.4  , 0.5   , 1.9   , 2.33]
+#jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
+#jpos_max: [0.6  , 0.4  , 0.5   , 1.9   , 2.33 , 0.6  , 0.4  , 0.5   , 1.9   , 2.33]
 
-jvel_max: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
-jvel_min: [-10., -10., -10., -10., -10., -10., -10., -10., -10., -10.]
+#jvel_max: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
+#jvel_min: [-10., -10., -10., -10., -10., -10., -10., -10., -10., -10.]
 
-jtrq_max: [200.  , 200.  , 200.  , 200.  , 20.  , 200.  , 200.  , 200.  , 200.  , 20.]
-jtrq_min: [-200. , -200. , -200. , -200. , -20. , -200. , -200. , -200. , -200. , -20.]
+#jtrq_max: [200.  , 200.  , 200.  , 200.  , 20.  , 200.  , 200.  , 200.  , 200.  , 20.]
+#jtrq_min: [-200. , -200. , -200. , -200. , -20. , -200. , -200. , -200. , -200. , -20.]
 
-max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
+#max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
