--- a/Config/Draco/TEST/BALANCING_TEST.yaml
+++ b/Config/Draco/TEST/BALANCING_TEST.yaml
@@ -1,15 +1,15 @@
 test_configuration:
-    initial_jpos: [0., 0.0, -0.8, 1.6, 0.81, 0., 0.0, -0.8, 1.6, 0.81]
-    jpos_initialization_time: 4.0
+    initial_jpos: [0., 0., -0.8, 1.6, 0.81, 0., 0, -0.8, 1.6, 0.81]
+    jpos_initialization_time: 2.0
 
-    body_height: 0.95
-    body_lifting_time: 4.0
+    body_height: 1.0
+    body_lifting_time: 2.0
 
-    interpolation_time: 1.0
-    balancing_ctrl_time: 10000.0
+    com_height: 0.75
+    stabilization_duration: 2.0
+    com_ctrl_time: 1000000.0
 
 control_configuration:
-
     joint_position_ctrl:
         kp: [100 , 100 , 100 , 100 , 50. , 100 , 100 , 100 , 100 , 50. ]
         kd: [3   , 3   , 3   , 3   , 1.   , 3   , 3   , 3   , 3   , 1.  ]
@@ -21,14 +21,8 @@ control_configuration:
         kp: [ 150 , 150 , 150 , 150 , 5 , 150 , 150 , 150 , 150 , 5 ]
         kd: [ 8   , 8   , 8   , 8   , 0 , 8   , 8   , 8   , 8   , 0 ]
 
-    body_ctrl:
-        kp: [80 , 170 , 170 , 170 , 5 , 80 , 170 , 170 , 170 , 5 ]
-        kd: [3  , 8   , 8   , 3   , 0 , 3  , 8   , 8   , 3   , 0  ]
-
-    kin_balancing_ctrl:
-        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300 ]
-        kd: [ 20, 20, 20, 20, 20, 20, 20, 20, 20, 20 ]
-
-    balancing_ctrl:
-        centroid_task_kp: [0, 0, 0, 200, 200, 200]
-        centroid_task_kd: [100, 100, 100, 50, 50, 50]
+    com_ctrl:
+        kp: [80 , 170 , 170 , 170 , 20 , 80 , 170 , 170 , 170 , 20 ]
+        kd: [3  , 8   , 8   , 3   , 1  , 3  , 8   , 8   , 3   , 1  ]
+        com_kp: [200, 50, 10]
+        com_kd: [20, 5, 1]
