--- a/Config/Draco/TEST/BALANCING_TEST.yaml
+++ b/Config/Draco/TEST/BALANCING_TEST.yaml
@@ -2,10 +2,10 @@ test_configuration:
     initial_jpos: [0., 0., -0.8, 1.6, 0.81, 0., 0, -0.8, 1.6, 0.81]
     jpos_initialization_time: 2.0
 
-    body_height: 1.0
+    body_height: 0.9
     body_lifting_time: 2.0
 
-    com_height: 0.75
+    com_height: 0.7
     stabilization_duration: 2.0
     com_ctrl_time: 1000000.0
 
@@ -22,7 +22,9 @@ control_configuration:
         kd: [ 8   , 8   , 8   , 8   , 0 , 8   , 8   , 8   , 8   , 0 ]
 
     com_ctrl:
-        kp: [80 , 170 , 170 , 170 , 20 , 80 , 170 , 170 , 170 , 20 ]
-        kd: [3  , 8   , 8   , 3   , 1  , 3  , 8   , 8   , 3   , 1  ]
+        kp: [80 , 170 , 170 , 170 , 60 , 80 , 170 , 170 , 170 , 60 ]
+        kd: [3  , 8   , 8   , 3   , 2  , 3  , 8   , 8   , 3   , 2  ]
         com_kp: [200, 50, 10]
         com_kd: [20, 5, 1]
+
+        desired_offset_x: 0.0
