begin creating IHWBC

--- a/PnC/WBC/CMakeLists.txt
+++ b/PnC/WBC/CMakeLists.txt
@@ -2,11 +2,13 @@ FILE(GLOB_RECURSE sources *.cpp)
 FILE(GLOB wbc_headers "*.hpp")
 FILE(GLOB wbdc_headers "WBDC/*.hpp")
 FILE(GLOB wblc_headers "WBLC/*.hpp")
+FILE(GLOB ihwbc_headers "IHWBC/*.hpp")
 
 add_library(myWBC SHARED ${sources}
                          ${wbc_headers}
                          ${wblc_headers}
-                         ${wbdc_headers})
+                         ${wbdc_headers}
+                         ${ihwbc_headers})
 target_link_libraries(myWBC myUtils
                             myGoldfarb
                             myRobotSystem)
@@ -17,4 +19,6 @@ install(FILES ${wbc_headers} DESTINATION
 install(FILES ${wblc_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/WBC/WBLC")
 install(FILES ${wbdc_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/WBC/WBDC")
+install(FILES ${ihwbc_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/WBC/WBDC")
