create unit test for ihwbc

--- a/PnC/DracoPnC/CMakeLists.txt
+++ b/PnC/DracoPnC/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(DracoPnC SHARED ${sources})
 target_link_libraries(DracoPnC ${DART_LIBRARIES}
                                myRobotSystem
                                myUtils
+                               myMPC
                                myWBC
                                myFilters
                                myPlanner)
