inverse dynamics joint position control works on draco. MPC runs at 35Hz for a 20 step horizon. 200Hz for a 10 step horizon.

--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,8 +1,8 @@
 #test_name: joint_test
 # test_name: body_test
 # test_name: walking_test
-test_name: balancing_test
-# test_name: mpc_test
+# test_name: balancing_test
+test_name: mpc_test
 
 
 #1test_name: rl_walking_test
