modify cmakelists to install libraries properly.

--- a/PnC/MPC/CMakeLists.txt
+++ b/PnC/MPC/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET(MPC_SOURCES CMPC.cpp)
+SET(MPC_HEADERS CMPC.hpp)
 
 add_library(myMPC SHARED ${MPC_SOURCES})
 target_link_libraries(myMPC myUtils
@@ -15,3 +16,8 @@ add_executable(run_test_mpc test_mpc.cpp)
 target_link_libraries(run_test_mpc myUtils
                             	   myGoldfarb
                             	   myRobotSystem)
+
+
+install(TARGETS myMPC DESTINATION "${INSTALL_LIB_DIR}")
+install(FILES ${MPC_HEADERS} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/MPC")
