--- a/Config/Draco/TEST/MPC_TEST.yaml
+++ b/Config/Draco/TEST/MPC_TEST.yaml
@@ -9,12 +9,17 @@ test_configuration:
     stabilization_duration: 2.0
     com_ctrl_time: 1000000.0
 
+    # Left and right sway
+    sway_start_time: 1000000.0 #6 # seconds
+    sway_magnitude: 0.01 # meters
+    sway_period: 2 # seconds
+
 control_configuration:
     joint_position_ctrl:
         kp: [100 , 100 , 100 , 100 , 100. , 100 , 100 , 100 , 100 , 100. ]
         kd: [2   , 2   , 2   , 2   , 2.   , 2   , 2   , 2   , 2   , 2.  ]
 
-    com_ctrl:
+    mpc_ctrl:
         # Task Weights
         foot_rz_xyz_kp: [100, 100, 100, 100]
         foot_rz_xyz_kd: [10, 10, 10, 10]
