--- a/Config/Draco/TEST/MPC_TEST.yaml
+++ b/Config/Draco/TEST/MPC_TEST.yaml
@@ -25,17 +25,17 @@ control_configuration:
         foot_rz_xyz_kp: [1, 1, 1, 1]
         foot_rz_xyz_kd: [0, 0, 0, 0]
 
-        com_kp: [0, 0, 0]
-        com_kd: [0., 0., 0.]
+        com_kp: [1.0, 1.0, 1.0]
+        com_kd: [0.0, 0.0, 0.0]
 
-        body_kp: [0, 0, 0]
+        body_kp: [1.0, 1.0, 1.0]
         body_kd: [0.0, 0.0, 0.0]
 
         joint_kp: [1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 , 1 ]
         joint_kd: [0  , 0   , 0 ,  0 ,  0 ,  0 ,  0 ,  0 ,  0 ,  0 ]
 
         # Weight given to the reaction force tracking relative to tasks when solving the QP for IHWBC
-        w_contact_weight: 1e-1
+        w_contact_weight: 1e-4
 
         # Alpha filter for the desired reaction force from the mpc. Closer to 1.0 will be closer to the current desired reaction force
         ihwbc_alpha_fd: 1.0 # Value between [0,1]. 
@@ -57,7 +57,7 @@ control_configuration:
         mpc_smooth_from_prev: true # Whether to use the previous solution to smooth the current solution
 
         mpc_toe_heel_smooth: 1e-4 # Parameter for smoothing the forces between the toe and the heel
-        mpc_do_toe_heel_smoothing: true # Whether to use toe heel smoothing
+        mpc_do_toe_heel_smoothing: false # Whether to use toe heel smoothing
 
         # MPC Vector cost indexing: <<  th1,  th2,  th3,  px,  py,  pz,   w1,  w2,   w3,   dpx,  dpy,  dpz,  g
         # th - World Roll, Pitch Yaw
@@ -66,4 +66,4 @@ control_configuration:
         # dp - World COM Velocity x,y,z
         # g - gravitiy (should always be 0.0!)
         # mpc_cost_vec: [2.5, 2.5, 2.5, 30.0, 10.0, 10.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
-        mpc_cost_vec: [10.0, 10.0, 10.0, 25.0, 10, 10, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]        
+        mpc_cost_vec: [5.0, 5.0, 5.0, 30.0, 10, 10, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]        
