--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -26,9 +26,16 @@ check_collision: false
 
 
 control_configuration:
-  # kp: [100 , 100 , 100 , 100 , 100 , 100 , 100 , 100 , 100 , 100]
-  # kd: [20  , 20  , 20  , 20  , 1  , 20  , 20  , 20  , 20  , 1]
-  kp: [5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5]
-  kd: [0.1  ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1  , 0.1]
+  # For admittance control:
+  # kp: [1000 , 1000 , 1000 , 1000 , 1000 , 1000 , 1000 , 1000 , 1000 , 1000]
+  # kd: [20  , 20  , 20  , 20  , 20  , 20  , 20  , 20  , 20  , 20]
+  
+  # Combined:
+  kp: [100 , 100 , 100 , 100 , 100 , 100 , 100 , 100 , 100 , 100]
+  kd: [20  , 20  , 20  , 20  , 1  , 20  , 20  , 20  , 20  , 1]
+  # kp: [5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5]
+  # kd: [0.1  ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1 ,  0.1  , 0.1]
+
+  # Torque control only
   # kp: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
   # kd: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
