--- a/Config/Draco/TEST/MPC_TEST.yaml
+++ b/Config/Draco/TEST/MPC_TEST.yaml
@@ -26,6 +26,11 @@ control_configuration:
         ki_icp: 1.0 # Integral - gain
         icp_sat_error: 1e-2 # Integral Error Saturation 
 
+        # Velocity Integration Params
+        max_joint_vel: 2.0 # rad/s
+        velocity_alpha: 25.0 # Hz
+
+
         # Task Weights
         foot_rz_xyz_kp: [1.0, 1.0, 1.0, 1.0]
         foot_rz_xyz_kd: [0, 0, 0, 0]
