--- a/Config/Draco/TEST/MPC_TEST.yaml
+++ b/Config/Draco/TEST/MPC_TEST.yaml
@@ -22,14 +22,16 @@ control_configuration:
 
     mpc_ctrl:
         # ICP control params
-        kp_icp: 20.0 # Proportional - gain
+        kp_icp: 10.0 # Proportional - gain
         ki_icp: 1.0 # Integral - gain
         icp_sat_error: 1e-2 # Integral Error Saturation 
 
         # Velocity Integration Params
-        max_joint_vel: 2.0 # rad/s
-        velocity_alpha: 25.0 # Hz
+        max_joint_vel: 2.0 # rad/s - maximum velocity after integration
+        velocity_break_freq: 25.0 # Hz
 
+        max_jpos_error: 0.2 # radians - maximum joint position error after integration 
+        position_break_freq: 0 # Hz
 
         # Task Weights
         foot_rz_xyz_kp: [1.0, 1.0, 1.0, 1.0]
