--- a/Config/Draco/TEST/JOINT_TEST.yaml
+++ b/Config/Draco/TEST/JOINT_TEST.yaml
@@ -1,12 +1,11 @@
 test_configuration:
     initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
-    initialization_time: 3.0
 
     test_duration: 1000.32
 
-    amplitude : [ 0 , 0 , 0. , 0 , 0.  , 0 , 0 , 0  , 0.  , 0. ]
-    frequency : [ 0 , 0 , 0.5 , 0 , 1.8 , 0 , 0 , 0. , 1.5 , 1.8 ]
-    phase     : [ 0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0 ]
+    #amplitude : [ 0 , 0 , 0. , 0 , 0.  , 0 , 0 , 0  , 0.  , 0. ]
+    #frequency : [ 0 , 0 , 0.5 , 0 , 1.8 , 0 , 0 , 0. , 1.5 , 1.8 ]
+    #phase     : [ 0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0 ]
 
     #initial_jpos: [0., -0.1, -0.4, 1.4, 1.57, 0., 0.08, -0.4, 1.4, 1.57]
 
@@ -20,16 +19,12 @@ test_configuration:
     #frequency : [ 0 , 0 , 1.0 , 1.0 , 1.0 , 0 , 0 , -1.0 , -1.0 , -1.0 ]
     #phase     : [ 0 , 0 , 0   , 0   , 0   , 0 , 0 , 0    , 0    , 0 ]
 
-    #amplitude : [ 0 , 0 , 0.0 , 0.0 , 0.0  , 0 , 0 , 0.0  , 0.3  , 0.0 ]
-    #frequency : [ 0 , 0 , 1.0 , 1.0 , 1.0 , 0 , 0 , -1.0 , -1.3 , -1.3 ]
-    #phase     : [ 0 , 0 , 0   , 0   , 0   , 0 , 0 , 0    , 0    , 0 ]
+    amplitude : [ 0 , 0 , 0.0 , 0.0 , 0.0  , 0 , 0 , 0.0  , 0.1  , 0.1 ]
+    frequency : [ 0 , 0 , 1.0 , 1.0 , 1.0 , 0 , 0 , -1.0 , -0.3 , -0.3 ]
+    phase     : [ 0 , 0 , 0   , 0   , 0   , 0 , 0 , 0    , 0    , 0 ]
 
 
 control_configuration:
-
-    joint_position_ctrl:
-        kp: [100 , 100 , 100 , 100 , 50. , 100 , 100 , 100 , 100 , 50. ]
-        kd: [3   , 3   , 3   , 3   , 1.   , 3   , 3   , 3   , 3   , 1.  ]
 
     joint_swing_ctrl:
         kp: [100 , 100 , 100 , 100 , 50. , 100 , 100 , 100 , 100 , 50. ]
