admittance control for balancing working. setting 0 des vel during transition phase removes oscillation at startup. need to see how stiff gains can be.

--- a/Config/Draco/TEST/JOINT_TEST.yaml
+++ b/Config/Draco/TEST/JOINT_TEST.yaml
@@ -1,5 +1,6 @@
 test_configuration:
-    initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+    #initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+    initial_jpos: [0., -0.1, -0.8, 1.6, 1.57, 0., 0.08, -0.8, 1.6, 1.57]
 
     test_duration: 1000.32
 
@@ -19,8 +20,8 @@ test_configuration:
     #frequency : [ 0 , 0 , 1.0 , 1.0 , 1.0 , 0 , 0 , -1.0 , -1.0 , -1.0 ]
     #phase     : [ 0 , 0 , 0   , 0   , 0   , 0 , 0 , 0    , 0    , 0 ]
 
-    amplitude : [ 0 , 0 , 0.0 , 0.0 , 0.0  , 0 , 0 , 0.0  , 0.1  , 0.1 ]
-    frequency : [ 0 , 0 , 1.0 , 1.0 , 1.0 , 0 , 0 , -1.0 , -0.3 , -0.3 ]
+    amplitude : [ 0 , 0 , 0.0 , 0.0 , 0.3  , 0 , 0 , 0.0  , 0.0  , 0.3 ]
+    frequency : [ 0 , 0 , 1.0 , 1.0 , 1.2 , 0 , 0 , -1.0 , -0.3 , -1.2 ]
     phase     : [ 0 , 0 , 0   , 0   , 0   , 0 , 0 , 0    , 0    , 0 ]
 
 
